--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="test">
-    <ul id="ddd">
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
+    <a class="show-btn" href="#">보이기</a>
+    <a class="hide-btn" href="#">감추기</a>
+    <p>
+      태그선택자 a를 클릭했습니다.
+    </p>
+
+    <script src="script/jquery-3.6.0.min.js"></script>
+    <script src="script/custom.js"></script>
 </body>
 </html>
