--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a class="show-btn" href="#">보이기</a>
-    <a class="hide-btn" href="#">감추기</a>
-    <p>
-      태그선택자 a를 클릭했습니다.
-    </p>
+    
+  <ul class="menu">
+    <li>
+      <a href="#">MENU-1</a>
+      <div class="sub-menu">
+        <a href="#">SUB-MENU</a>
+        <a href="#">SUB-MENU</a>
+        <a href="#">SUB-MENU</a>
+        <a href="#">SUB-MENU</a>
+      </div>
+    </li>
+    <li>
+      <a href="#">MENU-2</a>
+      <div class="sub-menu">
+        <a href="#">SUB-MENU</a>
+        <a href="#">SUB-MENU</a>
+        <a href="#">SUB-MENU</a>
+        <a href="#">SUB-MENU</a>
+      </div>
+    </li>
+  </ul>
+
+  <div class="btn">
+    <span class="active">공지사항</span>
+    <span>갤러리</span>
+  </div>
 
     <script src="script/jquery-3.6.0.min.js"></script>
     <script src="script/custom.js"></script>
