원형 크기 변경 로딩 애니메이션

--- a/index.html
+++ b/index.html
@@ -1,40 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-  <ul class="menu">
-    <li>
-      <a href="#">MENU-1</a>
-      <div class="sub-menu">
-        <a href="#">SUB-MENU</a>
-        <a href="#">SUB-MENU</a>
-        <a href="#">SUB-MENU</a>
-        <a href="#">SUB-MENU</a>
-      </div>
-    </li>
-    <li>
-      <a href="#">MENU-2</a>
-      <div class="sub-menu">
-        <a href="#">SUB-MENU</a>
-        <a href="#">SUB-MENU</a>
-        <a href="#">SUB-MENU</a>
-        <a href="#">SUB-MENU</a>
-      </div>
-    </li>
-  </ul>
-
-  <div class="btn">
-    <span class="active">공지사항</span>
-    <span>갤러리</span>
-  </div>
-
-    <script src="script/jquery-3.6.0.min.js"></script>
-    <script src="script/custom.js"></script>
+    <h1>dddd</h1>
 </body>
 </html>
