사각형 좌표 변경 로딩 애니메이션

--- a/Ani-prac/02-사각형 좌표 변경 로딩 애니메이션/index.html
+++ b/Ani-prac/02-사각형 좌표 변경 로딩 애니메이션/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../02-사각형 좌표 변경 로딩 애니메이션/style.css">
 </head>
 <body>
-    <h1>dddd</h1>
+    <div class="loading">
+        <span></span>
+        <span></span>
+    </div>
 </body>
 </html>
