--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul class="nav">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">SERVICE</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">CONTACT</a></li>
+    <ul class="sns">
+        <li>
+            <a href="#"><i class="fa fa-brands fa-facebook-f"></i></a>
+        </li>
+        <li>
+            <a href="#none"><i class="fa fa-twitter"></i></a>
+        </li>
+        <li>
+            <a href="#none"><i class="fa fa-google-plus"></i></a>
+        </li>
+        <li>
+            <a href="#none"><i class="fa fa-linkedin"></i></a>
+        </li>
+        <li>
+            <a href="#none"><i class="fa fa-instagram"></i></a>
+        </li>
     </ul>
 </body>
 </html>
