--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul class="sns">
+    <ul class="gallery">
         <li>
-            <a href="#"><i class="fa fa-brands fa-facebook-f"></i></a>
+            <div class="content"></div>
         </li>
         <li>
-            <a href="#none"><i class="fa fa-twitter"></i></a>
+            <div class="content"></div>
         </li>
         <li>
-            <a href="#none"><i class="fa fa-google-plus"></i></a>
+            <div class="content"></div>
         </li>
         <li>
-            <a href="#none"><i class="fa fa-linkedin"></i></a>
+            <div class="content"></div>
         </li>
         <li>
-            <a href="#none"><i class="fa fa-instagram"></i></a>
+            <div class="content"></div>
         </li>
     </ul>
 </body>
