--- a/index.html
+++ b/index.html
@@ -6,24 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/53bcbfc53b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <ul class="gallery">
-        <li>
-            <div class="content"></div>
-        </li>
-        <li>
-            <div class="content"></div>
-        </li>
-        <li>
-            <div class="content"></div>
-        </li>
-        <li>
-            <div class="content"></div>
-        </li>
-        <li>
-            <div class="content"></div>
-        </li>
-    </ul>
+    <div class="wrap">
+        <input type="checkbox" id="ham">
+        <label for="ham">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <div class="sidebar"></div>
+        
+    </div>
 </body>
 </html>
