--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/53bcbfc53b.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="wrap">
-        <input type="checkbox" id="ham">
-        <label for="ham">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-        <div class="sidebar"></div>
-        
-    </div>
+    <header>
+        <div class="logo">
+            <i class="fa-solid fa-bomb"></i>
+            <h1>DreamCoding</h1>
+        </div>
+
+        <ul class="nav">
+            <li><a>Dream</a></li>
+            <li><a>Coding</a></li>
+            <li><a>JAVA</a></li>
+            <li><a>HTML</a></li>
+            <li><a>CSS3</a></li>
+        </ul>
+
+        <ul class="icons">
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+        </ul>
+    </header>
 </body>
+
 </html>
