--- a/index.html
+++ b/index.html
@@ -10,25 +10,50 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <i class="fa-solid fa-bomb"></i>
-            <h1>DreamCoding</h1>
+    <div class="items">
+        <div class="item">
+            <img src="/images/crew-01.jpg">
+            <div class="content">
+                <h2>Andrew Yu <span>Developer</span></h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro labore eius consequuntur quibusdam rerum molestiae?
+                </p>
+                <ul class="sns">
+                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                </ul>
+            </div>
         </div>
-
-        <ul class="nav">
-            <li><a>Dream</a></li>
-            <li><a>Coding</a></li>
-            <li><a>JAVA</a></li>
-            <li><a>HTML</a></li>
-            <li><a>CSS3</a></li>
-        </ul>
-
-        <ul class="icons">
-            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-        </ul>
-    </header>
+        <div class="item">
+            <img src="/images/crew-01.jpg">
+            <div class="content">
+                <h2>Andrew Yu <span>Developer</span></h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro labore eius consequuntur quibusdam rerum molestiae?
+                </p>
+                <ul class="sns">
+                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="item">
+            <img src="/images/crew-01.jpg">
+            <div class="content">
+                <h2>Andrew Yu <span>Developer</span></h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro labore eius consequuntur quibusdam rerum molestiae?
+                </p>
+                <ul class="sns">
+                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
