--- a/index.html
+++ b/index.html
@@ -7,47 +7,56 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/53bcbfc53b.js" crossorigin="anonymous"></script>
-    
+
 </head>
 
 <body>
-    <div class="wrap">
-        <div class="heading">
-            <h1><span>코딩웍스</span>, 프론트엔드 퍼블리셔 취업을 위한 실전 퍼블리싱 강좌</h1>
-            <input type="text" placeholder="What are you looking for?">
-        </div>
-        <div class="tab-inner">
-            <ul class="btn">
-                <li data-alt="tab1" class="active">HTML5</li>
-                <li data-alt="tab2">CSS3</li>
-                <li data-alt="tab3">JQUERY</li>
-                <li data-alt="tab4">JAVASCRIPT</li>
-                <li data-alt="tab5">CSS FRAMNE</li>
-            </ul>
-            <div class="items">
-                <div class="item active" id="tab1">
-                    <h2>HTML5</h2>
-                    <img src="/images/platform-logo-01.png" >
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque doloremque vero cupiditate mollitia reprehenderit totam debitis itaque magnam provident recusandae consequuntur ut quos aperiam optio, vel amet nesciunt quo ipsa! Porro aperiam dolore pariatur eius quae totam quo nam, perspiciatis vero, assumenda cupiditate. Repellat ipsum itaque quo aut vitae cupiditate, quas porro sequi fugiat eligendi, veritatis odio, neque quae soluta inventore ea iure doloremque? Accusantium itaque ipsa quam expedita rem.
-                    </p>
-                </div>
-                <div class="item" id="tab2">
-                    <h2>CSS3</h2>
-                    <img src="/images/platform-logo-02.png" >
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque doloremque vero cupiditate mollitia reprehenderit totam debitis itaque magnam provident recusandae consequuntur ut quos aperiam optio, vel amet nesciunt quo ipsa! Porro aperiam dolore pariatur eius quae totam quo nam, perspiciatis vero, assumenda cupiditate. Repellat ipsum itaque quo aut vitae cupiditate, quas porro sequi fugiat eligendi, veritatis odio, neque quae soluta inventore ea iure doloremque? Accusantium itaque ipsa quam expedita rem.
-                    </p>
-                </div>
-                <div class="item" id="tab3">333</div>
-                <div class="item" id="tab4">444</div>
-                <div class="item" id="tab5">555</div>
+    <section>
+        <article>
+            <div class="heading">
+                <p>하드코딩(Hard Coding) 실력이 진짜 퍼블리싱 실력입니다.</p>
+                <h2><em>카톡</em> 간편 회원가입, <b>코딩웍스</b>의 진짜 퍼블리싱 강의를 만나세요.</h2>
             </div>
-        </div>
-    </div>
+            <div class="content">
+                <div class="accodian">
+                    <div class="title active" data-img="./images/app-capture-01.png">
+                        하드코딩(Hard Coding)실력이 진짜 퍼블리싱 실력
+                    </div>
+                    <div class="desc active">
+                        제이쿼리 플러그인 사용해서 역동적이고 화려하게 꾸미는 퍼블리싱은 진짜 퍼블리싱이 아닙니다. <br><br>
+                        진짜 퍼블리싱 실력은 HTML로 레이아웃 설계를 꼼꼼히 잘하고, CSS로 배치와 상세 디자인하고, 직접 작성한 제이쿼리(JQUERY)로 상호작용까지 만들 수 있는 것이 진짜 퍼블리싱 실력입니다.
+                    </div>
+                    <div class="title" data-img="./images/app-capture-02.png">
+                        하드코딩(Hard Coding)실력이 진짜 퍼블리싱 실력
+                    </div>
+                    <div class="desc">
+                        제이쿼리 플러그인 사용해서 역동적이고 화려하게 꾸미는 퍼블리싱은 진짜 퍼블리싱이 아닙니다. <br><br>
+                        진짜 퍼블리싱 실력은 HTML로 레이아웃 설계를 꼼꼼히 잘하고, CSS로 배치와 상세 디자인하고, 직접 작성한 제이쿼리(JQUERY)로 상호작용까지 만들 수 있는 것이 진짜 퍼블리싱 실력입니다.
+                    </div>
+                    <div class="title" data-img="./images/app-capture-01.png">
+                        하드코딩(Hard Coding)실력이 진짜 퍼블리싱 실력
+                    </div>
+                    <div class="desc">
+                        제이쿼리 플러그인 사용해서 역동적이고 화려하게 꾸미는 퍼블리싱은 진짜 퍼블리싱이 아닙니다. <br><br>
+                        진짜 퍼블리싱 실력은 HTML로 레이아웃 설계를 꼼꼼히 잘하고, CSS로 배치와 상세 디자인하고, 직접 작성한 제이쿼리(JQUERY)로 상호작용까지 만들 수 있는 것이 진짜 퍼블리싱 실력입니다.
+                    </div>
+                    <div class="title" data-img="./images/app-capture-02.png">
+                        하드코딩(Hard Coding)실력이 진짜 퍼블리싱 실력
+                    </div>
+                    <div class="desc">
+                        제이쿼리 플러그인 사용해서 역동적이고 화려하게 꾸미는 퍼블리싱은 진짜 퍼블리싱이 아닙니다. <br><br>
+                        진짜 퍼블리싱 실력은 HTML로 레이아웃 설계를 꼼꼼히 잘하고, CSS로 배치와 상세 디자인하고, 직접 작성한 제이쿼리(JQUERY)로 상호작용까지 만들 수 있는 것이 진짜 퍼블리싱 실력입니다.
+                    </div>
+                </div>
+                <div class="imgae">
+                    <img src="./images/app-capture-01.png">
+                </div>
+            </div>
+        </article>
+    </section>
 
-    <script src="/script/jquery-3.6.0.min.js"></script>
-    <script src="/script/custom.js"></script>
+    <script src="./script/jquery-3.6.0.min.js"></script>
+    <script src="./script/custom.js"></script>
 </body>
 
 </html>
